--- a/css/category_selection.css
+++ b/css/category_selection.css
@@ -7,6 +7,11 @@ a{
     font-size: 20px;
 }
 
+a.inline-button {
+    margin: 10px;
+    display: inline-block;
+}
+
 .category{
     display: inline-block;
     margin: 20px;
@@ -65,4 +70,6 @@ a{
   color: #000;
   border: 1px solid #f7B733;
 }
+
+
 
