--- a/css/input_selection.css
+++ b/css/input_selection.css
@@ -4,6 +4,11 @@
     height: 100px;
 }
 
+.validation-text{
+    color: red;
+    visibility: hidden;
+}
+
 input {
     background: transparent;
     border: none;
@@ -12,7 +17,4 @@ input {
     text-align: center;
 }
 
-a.inline-button {
-    margin: 20px;
-    display: inline-block;
-}
+
