--- a/css/data_selection.css
+++ b/css/data_selection.css
@@ -2,6 +2,10 @@ h6{
     font-size: 20px;
 }
 
+label{
+    font-size: 30px;
+}
+
 .data-type{
     width: 100%;
     height: 240px;
@@ -22,7 +26,7 @@ h6{
     top: 50px;
     left: 100px;
     right: 100px;
-    bottom: 70px;
+    bottom: 120px;
     /* background: white; */
 }
 
@@ -35,7 +39,7 @@ h6{
     /* background-color: blue; */
 }
 
-input{
+.line-input{
     border: 0;
     outline: 0;
     background: transparent;
@@ -44,6 +48,39 @@ input{
     text-align:left;
 }
 
-label{
-    font-size: 30px;
+.inputfile{
+    width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
 }
+
+.inputfile + label {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: 25px;
+    color: white;
+    background-color: #FC4A1A;
+    display: inline-block;
+    cursor: pointer;
+    border-radius: 8px;
+}
+
+.inputfile:focus + label,
+.inputfile + label:hover {
+    background-color: rgb(124, 51, 51);
+}
+
+.browse-button{
+    font-size: 25px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.upload-icon{
+    margin-right: 10px;
+}
+
