--- a/css/layout_chart_editor.css
+++ b/css/layout_chart_editor.css
@@ -1,11 +1,18 @@
+body{
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    margin: 0;
+}
+
+h2{
+    margin: 0;
+}
+
 .container{
     position: relative;
     width: 100%;
     height: 100%;
-}
-
-body{
-    margin: 0;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .menu-bar{
@@ -14,7 +21,42 @@ body{
     left: 10px;
     right: 10px;
     height:  60px;
-    background-color:grey;
+}
+
+.menu-bar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #f7B733;
+    height: 100%;
+}
+
+.menu-bar li {
+    float: left;
+}
+
+.menu-bar li a {
+    height: 100%;
+    display: block;
+    color: black;
+    text-align: center;
+    /* padding: 16px; */
+    text-decoration: none;
+    padding-right: 10px;
+    padding-left: 10px;
+    display: inline-flex;
+    align-items: center;
+}
+
+.menu-bar li a.active{
+    background-color: grey;
+    color: white;
+}
+
+.menu-bar li a:not(.nohover):hover {
+    background-color: grey;
+    color: white;
 }
 
 .content-drawing{
@@ -35,7 +77,55 @@ body{
     background-color: grey;
 }
 
+.content-edit-header{
+    width: 100%;
+    background-color:#f7B733;
+}
+
 .drawing-surface{
     position: absolute;
     text-align: center;
 }
+
+.logo{
+    height: 100%;
+}
+
+.collapse-div{
+    position: absolute; 
+    left: 10px; 
+    top: 5px;
+    cursor: pointer;
+}
+
+.column-div{
+    display: inline-block;
+}
+
+button.accordion {
+    background-color: #f7B733;
+    color: black;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+    text-align: center;
+}
+
+button.accordion.active, button.accordion:hover {
+    background-color: grey;
+    color: white;
+}
+
+div.panel {
+    padding: 0 18px;
+    background-color: #E9B872;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
+
+
