--- a/css/layout.css
+++ b/css/layout.css
@@ -17,7 +17,10 @@ h6{
     width: 100%;
     height: 100%;
     background-image: url("../img/blurred_graph.jpg");
-    /* background-color: black; */
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 .section-top{
