--- a/css/layout_chart_editor.css
+++ b/css/layout_chart_editor.css
@@ -59,12 +59,13 @@ h2{
     color: white;
 }
 
-.content-drawing{
+.drawing-surface{
     position: absolute;
     top: 80px;
     left: 10px;
     bottom: 10px;
     right: 270px;
+    text-align: center;
 }
 
 .content-edit{
@@ -80,11 +81,6 @@ h2{
 .content-edit-header{
     width: 100%;
     background-color:#f7B733;
-}
-
-.drawing-surface{
-    position: absolute;
-    text-align: center;
 }
 
 .logo{
@@ -127,5 +123,24 @@ div.panel {
     overflow: hidden;
     transition: max-height 0.2s ease-out;
 }
+
+svg{
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 479px){ ... }
+
+@media only screen and (min-width: 480px) and (max-width: 767px){ ... }
+
+@media only screen and (min-width: 768px) and (max-width: 991px){ ... }
+
+@media only screen and (min-width: 992px) and (max-width: 1999px){ ... }
 
 
