--- a/css/layout_chart_editor.css
+++ b/css/layout_chart_editor.css
@@ -125,6 +125,8 @@ div.panel {
 }
 
 svg{
+    height: 500px;
+    width: 500px;
     position: absolute;
     top: 50%;
     -webkit-transform: translateY(-50%);
@@ -135,12 +137,30 @@ svg{
     margin: auto;
 }
 
-@media only screen and (min-width: 320px) and (max-width: 479px){ ... }
-
-@media only screen and (min-width: 480px) and (max-width: 767px){ ... }
-
-@media only screen and (min-width: 768px) and (max-width: 991px){ ... }
-
-@media only screen and (min-width: 992px) and (max-width: 1999px){ ... }
-
+@media screen and (max-width: 480px){
+    .drawing-surface{
+        position: absolute;
+        height: 400px;
+        width: 100%;
+        top: 71px;
+        left: 0;
+        bottom: 190px;
+        right: 0;
+        text-align: center;
+    }
+    .content-edit{
+        width: 100%;
+        height: 180px;
+        top:unset;
+        bottom: 0;
+        left:0;
+        right:0;
+    }
+    svg{
+        height: 280;
+        width: 280;
+        top: 42%;
+        left:45px;
+    }
+}
 
