--- a/css/welcome_page.css
+++ b/css/welcome_page.css
@@ -28,3 +28,12 @@ h2{
     margin-top: 300px;
     margin-bottom: 0;
 }
+@media screen and (max-width: 480px){
+    .section-content{
+        top:0;
+    }
+        .section-content h2{
+            margin-top: 100px;
+            font-size:50px;
+        }
+}
