--- a/css/category_selection.css
+++ b/css/category_selection.css
@@ -1,16 +1,5 @@
-h2{
-    margin-top: 100px;
-    margin-bottom: 0;
-}
-
-a{
-    font-size: 20px;
-}
-
-a.inline-button {
-    margin-left: 10px;
-    margin-right: 10px;
-    display: inline-block;
+#category-selection-page{
+    margin-top: 40px;
 }
 
 .category{
@@ -20,7 +9,7 @@ a.inline-button {
     
 }
 
-.square{
+.category .square{
     position: relative;
     width: 250px;
     padding-bottom: 250px;
@@ -32,8 +21,8 @@ a.inline-button {
     transition: border-color 300ms;
 }
 
-.square:hover,
-.square:active {
+.category .square:hover,
+.category .square:active {
   color: #000;
   border: 2px solid #f7B733;
 }
@@ -45,66 +34,73 @@ a.inline-button {
     padding: 10% 5%;
     
 }
-
-.ghost-button {
-    display: block; 
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    text-align: right;
-    width: 150px;
-    padding: 8px;
-    color: rgb(0, 0, 0);
-    border-radius: 100px;
-    border: 1px solid rgb(0, 0, 0);
-    text-align: center;
-    outline: none;
-    text-decoration: none;
-    transition: background-color 300ms, border-color 700ms;
-    /* margin-top: 30px; */
-    text-align: center;
-    
+.fa{
+    font-size:5em !important;
 }
 
-.ghost-button:not(.nohover):hover,
-.ghost-button:not(.nohover):active {
-  background-color: #f7B733;
-  color: #000;
-  border: 1px solid #f7B733;
-}
-
-.ghost-button-selected{
-    background-color: #f7B733;
-    color: #000;
-    border: 1px solid #f7B733;
-}
-
-@media only screen and (min-width: 25px){
-    .square{
+@media only screen and (max-width: 451px) , (max-height: 451px){
+    #category-selection-page .square{
         width: 100px;
         padding-bottom: 100px;
     }
 
-    .section-content-small h2
+    #category-selection-page h2
     {
         font-size: 30px;
     }
+    .fa{
+        font-size:2em !important;
+    }
+}
+@media only screen and (min-width : 452px) and (max-width: 825px){
+    #category-selection-page{
+        margin-top: 10px;
+    }
+
+    #category-selection-page .square{
+        width: 150px;
+        padding-bottom: 140px;
+    }
+    #category-selection-page h2
+    {
+        font-size: 30px;
+    }
+    .fa{
+        font-size:3em !important;
+    }
+}
+@media only screen and (min-width : 825px) and (max-width: 1000px){
+    #category-selection-page{
+        margin-top: 20px;
+    }
+    #category-selection-page .categories{
+            margin: 0px 5% 0px 5%;    }
+    #category-selection-page .square{
+        width: 200px;
+        padding-bottom: 185px;
+    }
+    #category-selection-page h2
+    {
+        font-size: 40px;
+    }
+    .fa{
+        font-size:3em !important;
+    }
 }
 
-@media only screen and (min-width: 599px){
+/*@media only screen and (min-width: 599px){
 
-    .square{
+    #category-selection-page .square{
         width: 250px;
         padding-bottom: 250px;
     }
 
-    .section-content-small h2
+    #category-selection-page .section-content h2
     {
         font-size: 50px;
     }
     
     
 }
-
+*/
 
