--- a/css/ined.css
+++ b/css/ined.css
@@ -1,55 +1,38 @@
-body{
-    margin: 0;
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
-    font-size: 40px;
-    font-variant: normal;
-    font-style: normal;
-    font-weight: 100;
-    background-image: url("../img/blurred_graph.jpg");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
-    background-size: cover;
+#start-page a{
+    font-size: 20px;
 }
 
-h6{
-    margin: 0;
-}
-
-.container{
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
-.section-top{
-    position: absolute;
-    width: 100%;
-    height: 100px;
+.ghost-button {
+    display: inline-block;
+    width: 150px;
+    padding: 8px;
+    color: rgb(0, 0, 0);
+    border-radius: 100px;
+    border: 1px solid rgb(0, 0, 0);
     text-align: center;
-
+    outline: none;
+    text-decoration: none;
+    transition: background-color 300ms, border-color 700ms;
+    margin-top: 30px;
+    font-size: 20px;
 }
 
-.section-content{
-    position: absolute;
-    top: 100px;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    text-align: center;
+.ghost-button:hover,
+.ghost-button:active {
+  background-color: #f7B733;
+  color: #000;
+  border: 1px solid #f7B733;
 }
 
-.section-content-small{
-    position: absolute;
-    top: 100px;
-    left: 0;
-    bottom: 120px;
-    right: 0;
-    text-align: center;
+#start-page{
+    margin-top: 250px;
 }
 
-.logo{
-    height: 100%;
-    text-align: center;
+@media screen and (max-width: 480px){
+    
+    #start-page .section-content h2{
+        margin-top: 100px;
+        font-size:50px;
+    }
+    
 }
