--- a/css/layout_chart_editor.css
+++ b/css/layout_chart_editor.css
@@ -5,17 +5,9 @@ body{
 }
 
 h2{
-    margin: 0;
+    margin: 0;  
 }
-
-.container{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    font-family: 'Open Sans', sans-serif;
-}
-
-.menu-bar{
+.chart-editor .menu-bar{
     position: absolute;
     top: 10px;
     left: 10px;
@@ -23,7 +15,7 @@ h2{
     height:  60px;
 }
 
-.menu-bar ul {
+.chart-editor .menu-bar ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -32,12 +24,12 @@ h2{
     height: 100%;
 }
 
-.menu-bar li {
+.chart-editor .menu-bar li {
     float: left;
 }
 
-.menu-bar li a {
-    height: 100%;
+.chart-editor .menu-bar li a {
+    height: 60px;
     display: block;
     color: black;
     text-align: center;
@@ -49,17 +41,20 @@ h2{
     align-items: center;
 }
 
-.menu-bar li a.active{
+.chart-editor .menu-bar li a.active{
     background-color: grey;
     color: white;
 }
 
-.menu-bar li a:not(.nohover):hover {
+.chart-editor .menu-bar li a:not(.nohover):hover {
     background-color: grey;
     color: white;
 }
+.chart-editor .menu-bar a .logo{
+    height: 60px;
+}
 
-.drawing-surface{
+.chart-editor .drawing-surface{
     position: absolute;
     top: 80px;
     left: 10px;
@@ -68,7 +63,7 @@ h2{
     text-align: center;
 }
 
-.content-edit{
+.chart-editor .content-edit{
     position: absolute;
     text-align: center;
     right: 10px;
@@ -78,13 +73,9 @@ h2{
     background-color: grey;
 }
 
-.content-edit-header{
+.chart-editor .content-edit-header{
     width: 100%;
     background-color:#f7B733;
-}
-
-.logo{
-    height: 100%;
 }
 
 .collapse-div{
