--- a/css/data_selection.css
+++ b/css/data_selection.css
@@ -84,3 +84,18 @@ label{
     margin-right: 10px;
 }
 
+.processing-status{
+    display: none;
+    left: 0;
+    right: 0;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+}
+#upload-error-message{
+    display: none;
+    font-size: 30px;
+    color: red;
+    font-weight: bold;
+    margin: 0;
+}
