--- a/css/layout.css
+++ b/css/layout.css
@@ -3,6 +3,7 @@ html{
     width: 100%;
 }
 body{
+    margin:0px;
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-size: 40px;
