Added cursor pointer on some elements and made subcategory work with SPA template.

--- a/css/category_selection.css
+++ b/css/category_selection.css
@@ -32,7 +32,7 @@
     height: 80%;
     width: 90%;
     padding: 10% 5%;
-    
+    cursor:pointer;
 }
 
 @media only screen and (max-width: 451px) , (max-height: 451px){
