--- a/css/input_selection.css
+++ b/css/input_selection.css
@@ -17,4 +17,10 @@ input {
     text-align: center;
 }
 
+@media only screen and (max-width: 670px){
+    input{
+         font-size: 30px; 
+    }
+}
+
 
