--- a/css/infographic_editor.css
+++ b/css/infographic_editor.css
@@ -1,61 +1,128 @@
-/*
-#To To --Task (fixing infographic_editor layout )
-Here must go the css extracted from layout_chart_editor.css that has not been already been
-merged into layout.css
-*/
-
-
-/*
-
-p{
-	margin:0;
-	font-size:14px;
+#infographic-editor{
+    font-size:15px;
+}
+h2{
+    margin: 0;  
+}
+#infographic-editor .menu-bar{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    height:  60px;
 }
 
-h3{
-    padding: 0px;
-    margin: 0px;
-    padding-bottom: 30px;
+#infographic-editor .menu-bar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #8cc7fc;
+    height: 100%;
 }
 
-.drawing-surface img{
-	height: 100%;
-	width: 100%;
+#infographic-editor .menu-bar li {
+    float: left;
 }
 
-.editor-surface h4{
-	font-size: 20px;
-	font-weight: bold;
+#infographic-editor .menu-bar li a {
+    height: 60px;
+    display: block;
+    color: black;
+    text-align: center;
+    /* padding: 16px; */
+    text-decoration: none;
+    padding-right: 10px;
+    padding-left: 10px;
+    display: inline-flex;
+    align-items: center;
 }
 
-.editor-surface .chart-slice{
-	display: inline-block;
-	width: 100%;
-	margin-left: 20px;
+#infographic-editor .menu-bar li a.active{
+    background-color: grey;
+    color: white;
 }
 
-.editor-surface .chart-slice .color-input{
-	float:left;
+#infographic-editor .menu-bar li a:not(.nohover):hover {
+    background-color: grey;
+    color: white;
+}
+#infographic-editor .menu-bar a .logo{
+    height: 60px;
 }
 
-.editor-surface .chart-slice p{
-	text-align: left;
-	width: 90px;
-	float:left;
-	color:white;
-	font-size:17;
-	line-height: 1.5;
-	font-weight: 500;
-	margin-left: 10px;
+
+
+#infographic-editor .drawing-surface{
+    position: absolute;
+    top: 0px;
+    left: 10px;
+    bottom: 10px;
+    right: 420px;
+}
+    #infographic-editor .drawing-surface-fade{ 
+        width: 100%;
+        height: 100%;
+        background-color: black;
+        opacity: 0.3;
+}
+    #infographic-editor .drawing-surface-content{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0px;
+        left: 0px;
+        bottom: 10px;
+        right: 400px;
 }
 
-.editor-surface .chart-slice .count-input{
-	margin-left: 10px;
-	float:left;
-	height: 23px;
-	width: 38px;
+
+
+#infographic-editor .data-editor{
+    position: absolute;
+    right: 10px;
+    background-color: #fbc035;
+    width: 400px;
+    height: calc(100% - 70px);
+    z-index: 100;
+    top: 70px;
+    display: none;
+}
+
+svg{
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 
 @media screen and (max-width: 480px){
+    .drawing-surface-content{
+        position: absolute;
+        height: 400px;
+        width: 100%;
+        top: 71px;
+        left: 0;
+        bottom: 190px;
+        right: 0;
+        text-align: center;
+    }
+    .content-edit{
+        width: 100%;
+        height: 180px;
+        top:unset;
+        bottom: 0;
+        left:0;
+        right:0;
+    }
+    svg{
+        height: 280;
+        width: 280;
+        top: 42%;
+        left:45px;
+    }
 }
-*/
