Added a new page for chart type selection,refactored css

--- a/css/layout.css
+++ b/css/layout.css
@@ -31,8 +31,8 @@ h6{
     width: 100%;
 
 }
-.layout-background .fa-custom{
-    font-size:5em;
+.fa-custom{
+    font-size:5em!important;
 }
 
 .section-top{
@@ -79,3 +79,91 @@ h6{
   color: #000;
   border: 1px solid #f7B733;
 }
+
+
+.category{
+    display: inline-block;
+    margin: 20px;
+    position: relative;
+    
+}
+.square{
+    position: relative;
+    width: 250px;
+    padding-bottom: 250px;
+    margin: 1.66%;
+    overflow: hidden;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 20px;
+    outline: none;
+    transition: border-color 300ms;
+}
+
+.square:hover,
+.category .square:active {
+  color: #000;
+  border: 2px solid #f7B733;
+}
+
+.content{
+    position: absolute;
+    height: 80%;
+    width: 90%;
+    padding: 10% 5%;
+    cursor:pointer;
+}
+
+#category-selection-page .section-bottom-content , #chart-type-selection-page .section-bottom-content {
+    margin-top: 40px;
+}
+
+@media only screen and (max-width: 451px) , (max-height: 451px){
+    .square{
+        width: 100px;
+        padding-bottom: 100px;
+    }
+
+    h2
+    {
+        font-size: 30px;
+    }
+    .fa-custom{
+        font-size: 2em !important;
+    }
+}
+@media only screen and (min-width : 452px) and (max-width: 825px){
+    .layout-background{
+        margin-top: 10px;
+    }
+
+    .square{
+        width: 150px;
+        padding-bottom: 140px;
+    }
+    .layout-background h2
+    {
+        font-size: 30px;
+    }
+    .fa-custom{
+        font-size:3em !important;
+    }
+}
+@media only screen and (min-width : 825px) and (max-width: 1000px){
+    .layout-background{
+        margin-top: 20px;
+    }
+    .categories{
+            margin: 0px 5% 0px 5%;    }
+    .square{
+        width: 200px;
+        padding-bottom: 185px;
+    }
+    .layout-background h2
+    {
+        font-size: 40px;
+    }
+    .fa-custom{
+        font-size: 4em !important;
+    }
+}
+
