--- a/css/infographic_editor.css
+++ b/css/infographic_editor.css
@@ -57,9 +57,10 @@ h2{
     position: absolute;
     top: 0px;
     left: 10px;
-    bottom: 10px;
-    right: 10px;
+    bottom: 0px;
+    width: calc( 100% - 20px);
 }
+
     #infographic-editor .drawing-surface-fade{ 
         width: 100%;
         height: 100%;
@@ -79,14 +80,19 @@ h2{
 
 
 #infographic-editor .data-editor{
+    -webkit-transition: top 1s;
+    transition: top 1s;
     position: absolute;
-    right: 10px;
+    top: 430px;
+    bottom: 20px;
+    left: 13%;
+    opacity: 0.5;
     background-color: #fbc035;
-    width: 400px;
-    height: calc(100% - 70px);
-    z-index: 100;
-    top: 70px;
-    display: none;
+    width: 70%;
+    margin: 20px;
+}
+#infographic-editor .data-editor-opened{
+    top: 20px;
 }
 
 svg{
