--- a/css/infographic_editor.css
+++ b/css/infographic_editor.css
@@ -94,10 +94,32 @@ h2{
     height: 100%;
     opacity: 0.5;
     background-color: #fbc035;
+    overflow-y: scroll;
 }
+    #infographic-editor .data-editor .data-row{
+        display: -webkit-flex; /* Safari */
+        -webkit-align-items: center; /* Safari 7.0+ */
+        display: flex;
+        align-items: center;
+        margin: 10px;
+    }
+    #infographic-editor .data-editor .data-row label{
+        padding-left: 10px;
+        width:100px;
+        text-align: start;
+    }
+    #infographic-editor .data-editor .data-row .color-input{
+        width: 30px;
+        border: none;
+        padding: 0;
+    }
+    #infographic-editor .data-editor .data-row .count-input{
+        width: 100px;
+    }
 #infographic-editor .data-editor-opened{
     right: 10px;
 }
+
 
 svg{
     position: absolute;
@@ -126,33 +148,5 @@ svg{
     }
     #infographic-editor .data-editor{
         width:200px;
-    }
-
-}
-
-@media screen and (max-width: 480px){
-    .drawing-surface-content{
-        position: absolute;
-        height: 400px;
-        width: 100%;
-        top: 71px;
-        left: 0;
-        bottom: 190px;
-        right: 0;
-        text-align: center;
-    }
-    .content-edit{
-        width: 100%;
-        height: 180px;
-        top:unset;
-        bottom: 0;
-        left:0;
-        right:0;
-    }
-    svg{
-        height: 280;
-        width: 280;
-        top: 42%;
-        left:45px;
     }
 }
